cli/tests/snapshot/inputs/errors/caller_contract_violation.ncl
# capture = 'stderr'
# command = ['eval']
std.array.map std.function.id 'not-an-array

